--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,8 +1,25 @@
 ﻿<Window x:Class="ISRMUL.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="ИС Распознавания исторических манускриптов" >
     <Grid>
-        
+        <TabControl>
+            <TabItem Header="Документ">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Сегментация">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Алфавит">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Обучение">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="Переобучение">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
+
     </Grid>
 </Window>
