--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,11 +1,19 @@
 ﻿<Window x:Class="ISRMUL.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:page="clr-namespace:ISRMUL.Control.Page"
         Title="ИС Распознавания исторических манускриптов" >
     <Grid>
         <TabControl>
             <TabItem Header="Документ">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="4*"/>
+                    </Grid.ColumnDefinitions>
+                    <page:PageViewControl x:Name="Pages" Grid.Column="0"/>
+                    <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="192,135,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+                </Grid>
             </TabItem>
             <TabItem Header="Сегментация">
                 <Grid Background="#FFE5E5E5"/>
