--- a/Control/Page/PageControl.xaml
+++ b/Control/Page/PageControl.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             Height="300"
+             Width="200">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -15,8 +15,8 @@
             <Border.Effect>
                 <DropShadowEffect/>
             </Border.Effect>
-            <Image Name="Image" Source="C:\Users\test\Desktop\sample.png"/>
+            <Image Name="Image" Source="images/error.png" Stretch="Fill"/>
         </Border>
-        <TextBlock Text="SamplePage" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="14" />
+        <TextBlock Name="PageName" Text="Ошибка" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Times New Roman" FontSize="14" />
     </Grid>
 </UserControl>
