--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,17 +2,34 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:page="clr-namespace:ISRMUL.Control.Page"
-        Title="ИС Распознавания исторических манускриптов" >
+        xmlns:manuscript="clr-namespace:ISRMUL.Manuscript"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
+        Title="ИС Распознавания исторических манускриптов" MinWidth="1200" x:Name="MainForm">
     <Grid>
-        <TabControl>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="{Binding ActualHeight, ElementName=fileItem, Mode=OneWay}" />
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        
+        <Menu>
+            <MenuItem Header="Файл" Name="fileItem">
+                <MenuItem Header="Новый проект" Click="NewProjectMenuItem_Click"/>
+                <MenuItem Header="Открыть"/>
+                <MenuItem Header="Сохранить как" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}"/>
+                <MenuItem Header="Закрыть" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}"/>
+                <Separator/>
+                <MenuItem Header="Выход"/>               
+            </MenuItem>
+        </Menu>
+        
+        <TabControl Grid.Row="1">
             <TabItem Header="Документ">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="4*"/>
                     </Grid.ColumnDefinitions>
-                    <page:PageViewControl x:Name="Pages" Grid.Column="0"/>
-                    <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="192,135,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+                    <page:PageViewControl x:Name="Pages" Grid.Column="0" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" pageViewProject="{Binding CurrentProject, ElementName=MainForm, Mode=OneWay}"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Сегментация">
