--- a/Control/Page/PageViewControl.xaml
+++ b/Control/Page/PageViewControl.xaml
@@ -7,6 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+        <Grid.Background>
+            <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.InactiveBorderColorKey}}"/>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="9*"/>
             <RowDefinition Height="1*"/>
@@ -15,12 +18,14 @@
             <ColumnDefinition Width="1*"/> 
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <ListBox Name="Pages" HorizontalContentAlignment="Center"> 
-                <page:PageControl/>
-            </ListBox>
-        </ScrollViewer>
-        <Button Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" Width="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource Self}}" BorderThickness="0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}">
+        <Border BorderBrush="#FFB4B4B4" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" BorderThickness="0,0,0,1">
+            <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto" >
+                <ListBox Name="Pages" HorizontalContentAlignment="Center" SelectionChanged="Pages_SelectionChanged_1"> 
+                    <page:PageControl/>
+                </ListBox>
+            </ScrollViewer>
+        </Border>
+        <Button Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" Width="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource Self}}" BorderThickness="0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="Button_Click_2">
             <Image Source="images/delete.png"/>
         </Button>
         <Button Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Width="{Binding ActualHeight, Mode=OneWay, RelativeSource={RelativeSource Self}}" BorderThickness="0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="Button_Click_1">
