--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:page="clr-namespace:ISRMUL.Control.Page"
+        xmlns:editor="clr-namespace:ISRMUL.Control.Editor"
         xmlns:manuscript="clr-namespace:ISRMUL.Manuscript"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         Title="ИС Распознавания исторических манускриптов" MinWidth="1200" x:Name="MainForm">
@@ -30,6 +31,7 @@
                         <ColumnDefinition Width="4*"/>
                     </Grid.ColumnDefinitions>
                     <page:PageViewControl x:Name="Pages" Grid.Column="0" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" pageViewProject="{Binding CurrentProject, ElementName=MainForm, Mode=OneWay}"/>
+                    <editor:EditorViewControl x:Name="Editor" Grid.Column="1" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" editorViewProject="{Binding CurrentProject, ElementName=MainForm, Mode=OneWay}" />
                 </Grid>
             </TabItem>
             <TabItem Header="Сегментация">
