--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -35,7 +35,9 @@
                 </Grid>
             </TabItem>
             <TabItem Header="Сегментация">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5"> 
+                </Grid>
+               
             </TabItem>
             <TabItem Header="Алфавит">
                 <Grid Background="#FFE5E5E5"/>
