--- a/Control/Editor/EditorViewControl.xaml
+++ b/Control/Editor/EditorViewControl.xaml
@@ -18,14 +18,12 @@
                 </Grid.Background>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="6*"/>
                     <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
-                <ScrollViewer  Grid.Row="0" Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                <ScrollViewer  Grid.Row="0" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <Canvas Name="Canvas" MouseDown="Canvas_MouseDown_1" Height="{Binding ElementName=BackgroundBrush, Path=ImageSource.Height, Mode=OneWay}" Width="{Binding ElementName=BackgroundBrush, Path=ImageSource.Width, Mode=OneWay}">
                         <Canvas.Effect>
                             <DropShadowEffect/>
@@ -35,7 +33,7 @@
                         </Canvas.Background> 
                     </Canvas>
                 </ScrollViewer>
-                <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3">
+                <Grid Grid.Row="1" Grid.Column="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1*"/>
@@ -66,6 +64,7 @@
                             <TextBlock Grid.Row="2" Text="Сегментировать" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14" FontFamily="Times New Roman"/>
                         </Grid>
                     </Button>
+                    <Image x:Name="CurrentSymbol" Grid.Column="2"/>
                 </Grid>
             </Grid>
         </Border> 
