--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:page="clr-namespace:ISRMUL.Control.Page"
+        xmlns:alphabet="clr-namespace:ISRMUL.Control.Alphabet"
         xmlns:editor="clr-namespace:ISRMUL.Control.Editor"
         xmlns:manuscript="clr-namespace:ISRMUL.Manuscript"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
@@ -15,7 +16,7 @@
         <Menu>
             <MenuItem Header="Файл" Name="fileItem">
                 <MenuItem Header="Новый проект" Click="NewProjectMenuItem_Click"/>
-                <MenuItem Header="Открыть" />
+                <MenuItem Header="Открыть" Click="OpenProjectMenuItem_Click"/>
                 <MenuItem Header="Сохранить как" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" Click="SaveProjectMenuItem_Click"/>
                 <MenuItem Header="Закрыть" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}"/>
                 <Separator/>
@@ -34,13 +35,11 @@
                     <editor:EditorViewControl x:Name="Editor" Grid.Column="1" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" editorViewProject="{Binding CurrentProject, ElementName=MainForm, Mode=OneWay}" />
                 </Grid>
             </TabItem>
-            <TabItem Header="Сегментация">
-                <Grid Background="#FFE5E5E5"> 
-                </Grid>
-               
-            </TabItem>
             <TabItem Header="Алфавит">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <alphabet:AlphabetEditorView x:Name="AlphabetEditor" IsEnabled="{Binding ProjectReady, ElementName=MainForm, Mode=OneWay}" alphabetEditorViewProject="{Binding CurrentProject, ElementName=MainForm, Mode=OneWay}"/>
+                </Grid>
+                
             </TabItem>
             <TabItem Header="Обучение">
                 <Grid Background="#FFE5E5E5"/>
