--- a/Control/Alphabet/AlphabetEditorView.xaml
+++ b/Control/Alphabet/AlphabetEditorView.xaml
@@ -5,14 +5,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="800">
+             d:DesignHeight="500" d:DesignWidth="800"
+             x:Name="Editor">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0" BorderThickness="0,0,0,2" BorderBrush="Black">
-            <alphabet:AlphabetToolView x:Name="AlphabetTool"/>
+            <alphabet:AlphabetToolView x:Name="AlphabetTool" alphabetToolViewProject="{Binding ElementName=Editor, Path=alphabetEditorViewProject, Mode=OneWay}"/>
         </Border>
     </Grid>
 </UserControl>
