--- a/Control/Alphabet/AlphabetToolView.xaml
+++ b/Control/Alphabet/AlphabetToolView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             x:Name="Tool"
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="800">
     <Grid>
@@ -10,16 +11,29 @@
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <WrapPanel x:Name="AlphabetWrapPanel" Grid.Column="0"/>
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <ScrollViewer Grid.Row="0">
+                <WrapPanel x:Name="AlphabetWrapPanel" />
+            </ScrollViewer>
+            <TextBlock Grid.Row="1" Width="200"  HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Text="{Binding ElementName=Tool, Path=alphabetToolViewProject.CurrentAlphabet.Code}">
+                <TextBlock.Background>
+                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
+                </TextBlock.Background>
+            </TextBlock>
+        </Grid>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="0" x:Name="addButton"/>
-            <Button Grid.Row="1" x:Name="removeButton"/>
-            <Button Grid.Row="2" x:Name="unionButton"/>
+            <Button Grid.Row="0" x:Name="addButton" Click="addButton_Click_1"/>
+            <Button Grid.Row="1" x:Name="removeButton" Click="removeButton_Click_1"/>
+            <Button Grid.Row="2" x:Name="unionButton" Click="unionButton_Click_1"/>
         </Grid>
     </Grid>
 </UserControl>
